--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
